--- a/home.html
+++ b/home.html
@@ -1,9 +1,11 @@
 <html>
+    <body>
     <head>
         <link rel="stylesheet" href="styles.css">
+
     </head>
     <h1>About me</h1>
-    <img src="About me picture.jpg" alt="Alexander Kelly">
+    <img src="About me picture.jpg" alt="Alexander Kelly" class="center">
 
 
 
@@ -13,5 +15,5 @@
 
 
 
-
+</body>
 </html>
