--- a/home.html
+++ b/home.html
@@ -6,7 +6,8 @@
     </head>
     <h1>About me</h1>
     <img src="About me picture.jpg" alt="Alexander Kelly" class="center">
-
+    <h2>Writing Process</h2>
+    <p><a href="Writing Process.html">Writing Process</a></p>
 
 
 
