--- a/home.html
+++ b/home.html
@@ -7,7 +7,7 @@
     <h1>About me</h1>
     <img src="About me picture.jpg" alt="Alexander Kelly" class="center">
     <h2>Writing Process</h2>
-    <p><a href="Writing Process.html">Writing Process</a></p>
+    <a href="Writing Process.html">Writing Process</a>
 
 
 
