--- a/writing process.html
+++ b/writing process.html
@@ -1,6 +1,12 @@
 <html>
     <h1>Writing Processes</h1>
+    <body>
+        <p>Many writing styles have different parts that follow the english language standard. My personal process involves more than just the mechanics.</p>
 
+
+
+
+    </body>
 
 
 
