--- a/writing process.html
+++ b/writing process.html
@@ -1,7 +1,17 @@
 <html>
     <h1>Writing Processes</h1>
     <body>
-        <p>Many writing styles have different parts that follow the english language standard. My personal process involves more than just the mechanics.</p>
+<pre>   Many writing styles have different parts that follow the english language standard.
+   My personal process involves more than just the mechanics.
+   All of these differnces can be highlighted in the history
+   of how I was taught how to write.
+
+
+
+
+
+
+</pre>
 
 
 
