--- a/home.html
+++ b/home.html
@@ -1,7 +1,7 @@
 <html>
     <body>
     <head>
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="home.css">
 
     </head>
     <h1>About me</h1>
