--- a/writing process.html
+++ b/writing process.html
@@ -5,7 +5,7 @@
    My personal process involves more than just the mechanics.
    All of these differnces can be highlighted in the history
    of how I was taught how to write.
-
+   In my essay about my own writing style I em
 
 
 
