added text to PRE tag

--- a/writing process.html
+++ b/writing process.html
@@ -5,8 +5,13 @@
    My personal process involves more than just the mechanics.
    All of these differnces can be highlighted in the history
    of how I was taught how to write.
-   In my essay about my own writing style I em
-
+   In my essay about my own writing style I show how I have grown
+   every year since elementary school. In high school the teacher
+   who fostered my growth was Mrs Wendy Tamminga.
+   My own style of writing became stronger as I started
+   school at Central Washington University.
+   Writing styles change based on the
+   overall environment.
 
 
 
