more text and css format writing process

--- a/writing process.html
+++ b/writing process.html
@@ -1,7 +1,8 @@
 <html>
     <h1>Writing Processes</h1>
+    <head><link rel="stylesheet" href="writingprocesses.css"></head>
     <body>
-<pre>   Many writing styles have different parts that follow the english language standard.
+<h2><pre>   Many writing styles have different parts that follow the english language standard.
    My personal process involves more than just the mechanics.
    All of these differnces can be highlighted in the history
    of how I was taught how to write.
@@ -16,7 +17,7 @@
 
 
 
-</pre>
+</pre></h2>
 
 
 
