--- a/home.html
+++ b/home.html
@@ -8,7 +8,8 @@
     <img src="About me picture.jpg" alt="Alexander Kelly" class="center">
     <h2>Writing Process</h2>
     <a href="Writing Process.html">Writing Process</a>
-
+    <h2>Diffrences of styles</h2>
+    <a href="Different Styles.html">Different Styles</a>
 
 
 
