--- a/different styles.html
+++ b/different styles.html
@@ -1,9 +1,20 @@
 <html>
     <body>
-        
+        <h1><pse>Every person who is a writer has different styles.
+             The people who influences my own personal Writing
+             style are Mrs Tamminga from my high school and
+             Professor Melissa Brouwer at CWU. Both of these
+             teachers have given me differnet tools to use
+             which make my writing stronger.
+        </pse></h1>
     </body>
 
+<h2><pse>
+    When I write there has to be either complete quiet or some form of music.
+    This helps me to be more efficant with my writing in every situtation.
+    Most of my writing is usually academic but I have always enjoyed writing for pleasure.
 
+</pse></h2>
 
 
 
