css and new doc

--- a/different styles.html
+++ b/different styles.html
@@ -1,4 +1,5 @@
 <html>
+    <head><link rel="stylesheet" href="different styles.css"></head>
     <body>
         <h1><pse>Every person who is a writer has different styles.
              The people who influences my own personal Writing
