--- a/home.html
+++ b/home.html
@@ -6,15 +6,14 @@
     </head>
     <h1>About me</h1>
     <img src="About me picture.jpg" alt="Alexander Kelly" class="center">
+    <p>Welcome to the beginnings of being a writer by Alex Kelly.</p>
     <h2>Writing Process</h2>
     <a href="Writing Process.html">Writing Process</a>
     <h2>Diffrences of styles</h2>
     <a href="Different Styles.html">Different Styles</a>
 
 
-
-
-
+<!--Professor Brouwer, this is a rough website. Creating the entire esssay word for word would take too long.-->
 
 
 </body>
