comment for Prof Brouwer

--- a/home.html
+++ b/home.html
@@ -13,7 +13,7 @@
     <a href="Different Styles.html">Different Styles</a>
 
 
-<!--Professor Brouwer, this is a rough website. Creating the entire esssay word for word would take too long.-->
+<!--Professor Brouwer, this is a rough website. Creating the entire esssay word for word would take too many lines of code and I don't want to have a wordy website.-->
 
 
 </body>
