--- a/different styles.html
+++ b/different styles.html
@@ -1,6 +1,7 @@
 <html>
     <head><link rel="stylesheet" href="different styles.css"></head>
     <body>
+        <header>Different Styles</header>
         <h1><pse>Every person who is a writer has different styles.
              The people who influences my own personal Writing
              style are Mrs Tamminga from my high school and
